More README changes.